--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      prefix="og: http://ogp.me/ns#"
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/ia-1_adobespark.jpg"
     />
+    <meta name="description" content="Invoice App" />
+    <meta name="author" content="A.K. Afiq" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap"
